--- a/GRUPO 21/CLASE07/herencia/pom.xml
+++ b/GRUPO 21/CLASE07/herencia/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>co.edu.utp.misiontic2022.c2</groupId>
-  <artifactId>clase04ajedrez</artifactId>
+  <artifactId>herencia</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>clase04ajedrez</name>
+  <name>herencia</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
