--- a/GRUPO 21/CLASE08/colecciones/pom.xml
+++ b/GRUPO 21/CLASE08/colecciones/pom.xml
@@ -25,6 +25,17 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+
+  <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+  <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>4.0.0-alpha-7</version>
+  </dependency>
+    
+    
+
+    
   </dependencies>
 
   <build>
